src/test/deca/context/invalid/decl_method_type_of_arguments.deca
// Test la règle (2.7) : la classe enfant override une méthode parente,
// mais ne prend pas les mêmes arguments.

class A  {
    void displayHello(int x){
        println(x);
    }
}

class B extends A  {
    void displayHello(float b){
        println(b);
    }
}




// Resultat:
//# src/test/deca/context/invalid/decl_method_type_of_arguments.deca:11:4: Redéfinition de méthode invalide : rule 2.7
